dummy collapse, fixed parallax sec5, detailed a bit

--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -39,8 +39,10 @@
          padding: 7% 0 20%;
      }
      &#sec5 {
-         background-image: url("../images/bg3.jpg");
-         padding: 6% 15px;
+         .bg {
+             background-image: url("../images/bg3.jpg");
+         }
+         padding: 8% 15px;
      }
      &#sec6 {
          min-height: 400px;
@@ -194,6 +196,10 @@
      .title {
          font-size: 3em;
      }
+ }
+ 
+ #sec2 {
+     margin-bottom: 30px;
  }
  
  #sec3 {
@@ -380,6 +386,10 @@
              padding: 0;
          }
      }
+ }
+ 
+ .for_collapse {
+     padding: 0 25px;
  }
  
  // End Content //////////////////////////////////
